<resources>
    <string name="app_name">Android Academy Fundamentals</string>
    <string name="some_id">13+</string>
    <string name="name">Avengers: \nEnd Game</string>
    <string name="tag_name">Action, Adventure, Fantasy</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Snackbar">This is snackbar!</string>
</resources>