<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926">

    <ImageView
        android:id="@+id/image_main"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:background="@drawable/orig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_main_background"
        android:layout_width="600dp"
        android:layout_height="298dp"
        android:background="@drawable/mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="#6D6D80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="8dp"
        android:text="@string/some_id"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="240dp"
        android:maxLines="2"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tag_name"
        android:textColor="#FF3466"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#191926"
        android:src="@drawable/star_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:tint="@color/red"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#191926"
        android:src="@drawable/star_icon"
        app:layout_constraintStart_toEndOf="@+id/star1"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:tint="@color/red"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#191926"
        android:src="@drawable/star_icon"
        app:layout_constraintStart_toEndOf="@+id/star2"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:tint="@color/red"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/star4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#191926"
        android:src="@drawable/star_icon"
        app:layout_constraintStart_toEndOf="@+id/star3"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:tint="@color/red"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/star5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#191926"
        android:src="@drawable/star_icon"
        app:layout_constraintStart_toEndOf="@+id/star4"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        app:tint="@color/grey"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="125 REVIEWS"
        app:layout_constraintStart_toEndOf="@id/star5"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_storyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Storyline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="26dp"
        app:layout_constraintTop_toBottomOf="@id/tv_reviews"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintTop_toBottomOf="@id/tv_storyline"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cast"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="26dp"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/linear_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cast"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/downey"
            android:layout_weight="1"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/evans"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ruffalo"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hemsworth"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_photo"
        android:weightSum="4">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="Robert Downey Jr."
            android:layout_weight="1"
            android:textColor="@color/white"
            android:maxLines="2"/>

        <TextView
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:text="Chris Evans"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:maxLines="2"/>

        <TextView
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:text="Mark Ruffalo"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:maxLines="2"/>

        <TextView
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:text="Chris Hemsworth"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:maxLines="2"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



